--- a/client/angular.json
+++ b/client/angular.json
@@ -27,7 +27,8 @@
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
               "./node_modules/font-awesome/css/font-awesome.min.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
